<resources>
    <string name="app_name">Mid_term_practice</string>
    <string name="default_textView">Default</string>
    <string name="add_member">新增資料</string>
    <string name="name">姓名：</string>
    <string name="sex">性別：</string>
    <string name="age">年齡：</string>
    <string name="department">系級：</string>
    <string name="add">新增</string>
    <string name="back_to_main">回主選單</string>
</resources>
