<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fin__add__member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mid_term_practice.Fin_Add_Member">


    <TextView
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/string_size"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@id/tv_name" />
    <TextView
        android:text="@string/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/string_size"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@id/tv_age" />
    <TextView
        android:text="@string/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/string_size"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@id/tv_sex" />
    <TextView
        android:text="@string/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/string_size"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@id/tv_department" />

    <Button
        android:text="@string/back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_to_main"
        android:onClick="click_back_main"/>

</LinearLayout>
