<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add__member"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mid_term_practice.Add_Member"
    android:orientation="vertical">


    <TextView
        android:text="@string/add_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/string_size"
        android:id="@+id/tv_add_member"
        android:textColor="@android:color/black"
        android:gravity="center"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_size"
            android:id="@+id/tv_name"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/et_name" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <TextView
            android:text="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_size"
            android:id="@+id/tv_age"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/et_age" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <TextView
            android:text="@string/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_size"
            android:id="@+id/tv_sex"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/et_sex" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <TextView
            android:text="@string/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/string_size"
            android:id="@+id/tv_department"
            android:textColor="@android:color/black"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/et_department" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">
        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add"
            android:layout_gravity="end"
            android:onClick="click_add_member"/>
    </TableRow>

</TableLayout>
